# license-plate-blurring

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: api.py  ui.py
config/: config.yaml
diagrams/: architecture.mmd
src/: cli.py
src/core/: evaluation.py  model.py  processing.py  training.py
src/utils/: data.py  exploration.py  plotting.py
tests/: test_api_and_metrics.py  test_processing.py
