[project]
name = "license-plate-blurring"
version = "0.1.0"
description = "Enterprise-grade License Plate Detection and Blurring using YOLOv8"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ultralytics>=8.3.0",
    "opencv-python-headless>=4.10.0",
    "numpy>=1.24.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "gradio>=5.0.0",
    "kagglehub>=0.3.0",
    "matplotlib>=3.9.0",
    "pyyaml>=6.0.2"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx2>=0.20.0",
    "ruff>=0.7.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "app"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
